feat: Add admin system, fix mini program adapter, add product images
- Added Vue 3 + Element Plus admin panel (admin/)
- Added AdminController with full CRUD APIs for products, categories, orders, users, banners, coupons, stores
- Added DataImageUpdater for product/banner/category images
- Fixed mini program API adapter (pic, minPrice, basicInfo mapping)
- Added phone/password login to mini program
- Fixed SecurityConfig for admin API access
- Updated entity column sizes for image URLs
- All APIs tested and working